[gd_scene load_steps=5 format=3 uid="uid://cyhcmtaxqv1fj"]

[ext_resource type="Script" path="res://Magic/fireball.gd" id="1_y0vkd"]

[sub_resource type="SphereShape3D" id="SphereShape3D_o82e5"]

[sub_resource type="SphereMesh" id="SphereMesh_k2u2u"]

[sub_resource type="SphereShape3D" id="SphereShape3D_f2jxv"]

[node name="Fireball" type="RigidBody3D"]
collision_mask = 2
gravity_scale = 0.0
script = ExtResource("1_y0vkd")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0)
shape = SubResource("SphereShape3D_o82e5")

[node name="Area3D" type="Area3D" parent="."]
collision_mask = 2

[node name="MeshInstance3D" type="MeshInstance3D" parent="Area3D"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0)
mesh = SubResource("SphereMesh_k2u2u")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(0.119535, 0, 0, 0, 0.119535, 0, 0, 0, 0.119535, 0, 0, 0)
shape = SubResource("SphereShape3D_f2jxv")

[node name="UnqueueTimer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="timeout" from="UnqueueTimer" to="." method="_on_unqueue_timer_timeout"]
